# ftd-tools

./: .gitignore  CMakeLists.txt  README.md
cmake/: AddCatch2.cmake  AddFmt.cmake  AddSpdlog.cmake
include/ftd/: Concepts.h  Enumerator.h  FunctionWrapper.h  Log.h  Noncopyable.h  Numeric.h  ThreadPool.h  Timer.h  Utility.h
include/ftd/container/: Heap.h
src/: CMakeLists.txt  Log.cpp  SpdLogger.cpp  SpdLogger.h  ThreadPool.cpp
test/: CMakeLists.txt  test_thread_pool.cpp  test_timer.cpp
